--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,40 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i");
+
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Nunito", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.3px;
+  line-height: 1.6;
+  background: #fff;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin: 0;
+  font-family: "Nunito", sans-serif;
+  font-size: 0.813rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #47404f;
+  text-align: left;
+  background-color: #fff;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Nunito", sans-serif;
+}
+
+.card-title,
+.text-title,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #332e38;
 }
