[DB] add course card with dialogs and fix some displaying issues

--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -61,15 +61,14 @@ h2 {
 
 .form2 {
   margin-left: 10%;
-  margin-top: 4%
+  margin-top: 4%;
 }
 
 h3 {
-  font-family: 'nunito';
+  font-family: "nunito";
   text-decoration: #000000 underline;
 }
 
 .txt1 {
   margin-left: 10%;
-}
- */
+} */
